--- a/.github/workflows/check_links.yaml
+++ b/.github/workflows/check_links.yaml
@@ -48,9 +48,9 @@ jobs:
           uv pip install --upgrade pip setuptools wheel
           uv pip install -r dev/requirements/check_links_requirements.txt
 
-      - name: Convert notebooks to markdown
-        run: |
-          find . -name "*.ipynb" -exec jupyter nbconvert --to markdown {} \;
+#      - name: Convert notebooks to markdown
+#        run: |
+#          find . -name "*.ipynb" -exec jupyter nbconvert --to markdown {} \;
 
       - name: Check links with lychee
         uses: lycheeverse/lychee-action@a8c4c7cb88f0c7386610c35eb25108e448569cb0 # v2.7.0
